# robotics_projects

./: README.md
first_project/: info.txt  package.xml
first_project/launch/: launcher.launch
first_project/src/: odom_node.cpp
second_project/: CMakeLists.txt  package.xml  waypoints.csv
second_project/cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  slam_toolbox_2D_laser_config.yaml  slam_toolbox_3D_laser_config.yaml  teb_local_planner_params.yaml
second_project/launch/: amcl.launch.xml  map_2D_laser.launch  map_3D_laser.launch  navigation_amcl.launch
second_project/map_raw/: map_laser_first_bag.pgm  map_laser_first_bag.yaml  map_laser_second_bag.pgm  map_laser_second_bag.yaml  map_velodyne_first_bag.pgm  map_velodyne_first_bag.yaml  map_velodyne_second_bag.pgm  map_velodyne_second_bag.yaml
second_project/rviz/: config_mapping.rviz  robot_navigation.rviz
second_project/src/: navigation.cpp  tf_publisher.cpp
second_project/stage/: simulation_world.world  turtlebot.inc
